--- a/Admin/products.html
+++ b/Admin/products.html
@@ -32,7 +32,7 @@
             <a class="menu-item " href="overview.html">🏠 Tổng quan</a>
             <a class="menu-item " href="accounts.html">👥 Tài khoản</a>
             <a class="menu-item" href="products.html">🧰 Sản phẩm</a>
-            <a class="menu-item" href="#orders">🧾 Đơn hàng</a>
+            <a class="menu-item" href="orders.html">🧾 Đơn hàng</a>
             <a class="menu-item" href="#revenue">💹 Doanh thu</a>
             <a class="menu-item" href="#settings">⚙️ Cài đặt</a>
             <a class="menu-item danger" href="#logout">🚪 Đăng xuất</a>
