Setting chuyển trang cho các mục ở sidebar

--- a/Admin/revenue.html
+++ b/Admin/revenue.html
@@ -34,7 +34,7 @@
             <a class="menu-item" href="products.html">🧰 Sản phẩm</a>
             <a class="menu-item" href="orders.html">🧾 Đơn hàng</a>
             <a class="menu-item" href="revenue.html">💹 Doanh thu</a>
-            <a class="menu-item" href="#">⚙️ Cài đặt</a>
+            <a class="menu-item" href="settings.html">⚙️ Cài đặt</a>
             <a class="menu-item danger" href="#">🚪 Đăng xuất</a>
         </nav>
     </aside>
