--- a/Admin/orders.html
+++ b/Admin/orders.html
@@ -29,12 +29,12 @@
     <aside id="sidebar" class="sidebar" aria-hidden="false">
         <div class="sidebar-title">Quản trị</div>
         <nav class="menu">
-            <a class="menu-item " href="overview.html">🏠 Tổng quan</a>
-            <a class="menu-item " href="accounts.html">👥 Tài khoản</a>
+            <a class="menu-item" href="overview.html">🏠 Tổng quan</a>
+            <a class="menu-item" href="accounts.html">👥 Tài khoản</a>
             <a class="menu-item" href="products.html">🧰 Sản phẩm</a>
             <a class="menu-item" href="orders.html">🧾 Đơn hàng</a>
-            <a class="menu-item" href="#">💹 Doanh thu</a>
-            <a class="menu-item" href="#">⚙️ Cài đặt</a>
+            <a class="menu-item" href="revenue.html">💹 Doanh thu</a>
+            <a class="menu-item" href="settings.html">⚙️ Cài đặt</a>
             <a class="menu-item danger" href="#">🚪 Đăng xuất</a>
         </nav>
     </aside>
