Update lại Purchase history page

--- a/User/Purchase_history/purchase_history.html
+++ b/User/Purchase_history/purchase_history.html
@@ -35,7 +35,7 @@
         <!-- Search box -->
         <div class="search-box">
           <input type="text" placeholder="Tìm theo mã đơn hàng, tên sản phẩm..." />
-          <button>🔍</button>
+          <button class="search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
 
         <!-- Empty state -->
