Update lại giao diện User proflie page

--- a/User/Profile/profile.html
+++ b/User/Profile/profile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,58 +8,24 @@
 
   <!-- Liên kết đến file CSS -->
   <link rel="stylesheet" href="profile.css">
+  <link rel="stylesheet" href="../../style/header/header_logged_registed.css" />
+  <link rel="stylesheet" href="../User_sidebar/user_sidebar.css">
+  <link rel="stylesheet" href="../../style/footer/footer.css" />
 </head>
+
 <body>
 
-  <!-- ==============User/Profile/profile.css===== PHẦN HEADER =================== -->
-  <header class="header">
-    <div class="header-left">
-      <!-- Nút menu (dành cho giao diện nhỏ) -->
-      <button class="menu-btn">☰</button>
-      <h1 class="logo">META</h1>
-    </div>
+  <!-- Thanh header -->
+  <div id="header"></div>
 
-    <!-- Ô tìm kiếm trung tâm -->
-    <div class="header-center">
-      <input type="text" placeholder="Bạn cần tìm kiếm sản phẩm gì?">
-      <button class="search-btn">Tìm kiếm</button>
-    </div>
-
-    <!-- Khu vực bên phải: giỏ hàng, hotline, tài khoản -->
-    <div class="header-right">
-      <a href="#" class="cart">🛒 Giỏ hàng</a>
-      <a href="#" class="hotline">📞 Hotline</a>
-      <a href="#" class="user">👤 Chào Tiến</a>
-    </div>
-  </header>
-
-  <!-- =================== PHẦN NỘI DUNG CHÍNH =================== -->
+  <!-- Main layout -->
   <main class="container">
+    <!-- Sidebar -->
+    <div id="sidebar"></div>
 
-    <!-- ======== THANH MENU BÊN TRÁI ======== -->
-    <aside class="sidebar">
-      <div class="user-info">
-        <!-- Avatar dạng chữ cái -->
-        <div class="avatar">H</div>
-        <h2>Hung Truong Tiến</h2>
-      </div>
-
-      <!-- Danh sách liên kết menu -->
-      <ul>
-        <li><a href="#" class="active">Thông tin tài khoản</a></li>
-        <li><a href="#">Địa chỉ</a></li>
-        <li><a href="#">Lịch sử mua hàng</a></li>
-        <li><a href="#">Sản phẩm đã xem</a></li>
-        <li><a href="#">Đánh giá của tôi</a></li>
-        <li><a href="#">Mã giảm giá</a></li>
-        <li><a href="#">Tra cứu bảo hành</a></li>
-        <li><a href="#">Tra cứu hóa đơn</a></li>
-        <li><a href="#" class="logout">Đăng xuất</a></li>
-      </ul>
-    </aside>
-
-    <!-- ======== PHẦN THÔNG TIN TÀI KHOẢN ======== -->
+    <!-- Phần thông tin tài khoản -->
     <section class="profile">
+
       <!-- Ảnh đại diện lớn -->
       <div class="profile-header">
         <div class="avatar-large">H</div>
@@ -66,7 +33,7 @@
       </div>
 
       <!-- Bảng thông tin tài khoản -->
-      <div class="info-grid">
+      <!-- <div class="info-grid">
         <div class="info-row"><span>Tên đăng nhập:</span> 858a7db3c1474186a3e738c432a08b0d</div>
         <div class="info-row"><span>Họ tên:</span> Hung Truong Tien<a href="#">Sửa</a></div>
         <div class="info-row"><span>Điện thoại:</span> 0375690xxx ✅ <a href="#">Thay đổi</a></div>
@@ -78,10 +45,78 @@
           <span>Vô hiệu hóa và xóa:</span> Vô hiệu hóa tạm thời hoặc xóa vĩnh viễn tài khoản của bạn.
           <a href="#">Xem</a>
         </div>
+      </div> -->
+      <div class="info-table">
+        <div class="info-row">
+          <span class="label">Tên đăng nhập</span>
+          <span class="value">858a7db3c1474186a3e738c432a08b0d</span>
+        </div>
+
+        <div class="info-row">
+          <span class="label">Họ tên</span>
+          <span class="value">Hung Trương Tiến</span>
+          <a class="action">Sửa</a>
+        </div>
+
+        <div class="info-row">
+          <span class="label">Điện thoại</span>
+          <span class="value">0375690941 <i class="fa fa-check verified"></i></span>
+          <a class="action">Thay đổi</a>
+        </div>
+
+        <div class="info-row">
+          <span class="label">Email</span>
+          <span class="value">23130130@st.hcmuaf.edu.vn <i class="fa fa-check verified"></i></span>
+          <a class="action">Sửa</a>
+        </div>
+
+        <div class="info-row">
+          <span class="label">Ngày sinh</span>
+          <span class="value">26/10/2025</span>
+          <a class="action">Sửa</a>
+        </div>
+
+        <div class="info-row">
+          <span class="label">Giới tính</span>
+          <span class="value">Không tiết lộ</span>
+          <a class="action">Sửa</a>
+        </div>
+
+        <div class="info-row">
+          <span class="label">Mật khẩu</span>
+          <span class="value">*****</span>
+          <a class="action">Đổi mật khẩu</a>
+        </div>
+
+        <div class="info-row">
+          <span class="label">Vô hiệu hóa và xóa</span>
+          <span class="value long-text">
+            Vô hiệu hóa tạm thời hoặc xóa vĩnh viễn tài khoản của bạn.
+          </span>
+          <a class="action">Xem</a>
+        </div>
       </div>
+      
     </section>
 
   </main>
-
+  <!-- Footer -->
+  <div id="footer"></div>
 </body>
+<!-- Script để tải header, sidebar, footer -->
+<script>
+  // Load header
+  fetch("../../style/header/header_logged_registed.html")
+    .then(response => response.text())
+    .then(data => document.getElementById("header").innerHTML = data);
+  // Load sidebar
+  fetch("../User_sidebar/user_sidebar.html")
+    .then(response => response.text())
+    .then(data => document.getElementById("sidebar").innerHTML = data);
+  // Load footer
+  fetch("../../style/footer/footer.html")
+    .then(response => response.text())
+    .then(data => document.getElementById("footer").innerHTML = data);
+</script>
+
 </html>
