Update lại Font chữ và bố cục

--- a/User/Viewed_products/viewed_products.html
+++ b/User/Viewed_products/viewed_products.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sản phẩm đã xem</title>
     <link rel="stylesheet" href="viewed_products.css">
-    <link rel="stylesheet" href="../../style/header/header.css" />
+    <link rel="stylesheet" href="../../style/header/header_logged_registed.css" />
     <link rel="stylesheet" href="../User_sidebar/user_sidebar.css" />
     <link rel="stylesheet" href="../../style/footer/footer.css" />
 </head>
