--- a/Login/recover_password.html
+++ b/Login/recover_password.html
@@ -36,7 +36,7 @@
             <input type="email" class="email-input" placeholder="Nhập email">
 
             <div class="links">
-                <a href="#">Lấy lại mật khẩu bằng số điện thoại</a>
+                <!-- <a href="#">Lấy lại mật khẩu bằng số điện thoại</a> -->
                 <a href="#" style="float:right;">Bạn cần hỗ trợ?</a>
             </div>
 
